  found error in Meterpreter.
- Armitage now sends BLANK_PASSWORDS 0 with any Login menu items. This
  should speed up the login by forcing Metasploit to not try a blank
  user/password first.
- Armitage no longer sends payload related variables to auxiliary modules.
  (note to programmer: auxiliary modules don't use PAYLOADs :P~~~)

23 Jul 11 - Change Log
---------
- Ooops! My baaad. I broke db.creds in MSF. Someone else unbroke it. Now
  I call it the right way from Armitage so everything works like it's 
  supposed to. :)

21 Jul 11 - Change Log
---------
- loots dialog is now populated by db.loots RPC call. This is faster
  and compatible with changes made to MSF.
- credentials dialog is now populated by.creds RPC call. This is 
  faster and compatible with changes made to MSF.
- RPC connection code now strips out more characters that may cause 
  the XML parser to complain. 

  ** There were a few changes made to MSF over the past few days that
     broke the credentials and loots dialog. This update brings Armitage
     back to compatability with what exists in MSF trunk. **

19 Jul 11 - Change Log
---------
- You may now execute a post module against multiple hosts at once.
  Simply highlight the hosts, find your post module, double-click it
  and watch the magic happen. The drawback--each session will open a
  new tab to display the output of the post module.
- You may now hold down shift and click on a tab to close all tabs
  with the same title. If you run a post module against multiple hosts
  this is a good way to get rid of all those tabs.
- Graph view Ctrl+P shortcut (save screenshot of graph view) now shows
  pivots.
- post module output now logs to ~/.armitage/[host]/post.log
- Fixed some weirdness with popup menu mouse events not being consumed
- Added View -> Activity Logs to open folder containing Armitage logs
- Fixed command history so up arrow really gives the previous command